<resources>
    <string name="mlkit_model_unavailable_user_message">Modelo de tradução não encontrado. Por favor, baixe-o na seção de Gerenciamento de Modelos.</string>
    <string name="search">Search</string>
    <string name="rate_now">Avaliar Agora</string>
    <string name="later">Mais Tarde</string>
    <string name="use_custom_subscription_title">Usar configuração Microsoft personalizada</string>
    <string name="use_global_subscription_summary">Usando configuração global do Microsoft Translator</string>
    <string name="use_custom_subscription_summary">Usando chave e região personalizadas para este app</string>
    <string name="subRegion_yandex">Região da Chave Yandex</string>
    <string name="subRegion_micro">Região da Chave Microsoft</string>
    <string name="invalid_language_code">Código de idioma inválido para download do modelo</string>
    <string name="subRegion_title">Região da Chave Microsoft/Yandex</string>
    <string name="subRegion_summary">Insira a região associada à sua chave (ex: eastus, brazilsouth). Deixe em branco se não for regional.</string>
    <string name="app_name">"AllTrans"</string>
    <string name="loading">"Loading List of Applications - Please Wait"</string>
    <string name="clear_cache_success">"Please force-close the translated app! Translate Cache for this app will be erased next time the app starts!!"</string>
    <string name="wut_why_null">"Could not load the Per-app preference page. Close and re-open application again."</string>
    <string name="app_icon">"App Icon"</string>
    <string name="example_application">"Example Application"</string>
    <string name="description">"Description"</string>
    <string name="translate_anywhere">"Translate Everywhere"</string>
    <string name="apps_to_translate">"Apps"</string>
    <string name="global_settings">"Global"</string>
    <string name="instructions">"Instructions"</string>
    <string name="feedback_title">"Would you like to rate this app?"</string>
    <string name="feedback_positiveButtonText">"Not now"</string>
    <string name="feedback_negativeButtonText">"Never"</string>
    <string name="feedback_formTitle">"Submit Feedback"</string>
    <string name="feedback_formHint">"Tell us where we can improve"</string>
    <string name="feedback_formSubmitText">"Submit"</string>
    <string name="feedback_formCancelText">"Cancel"</string>
    <string name="pref_cat_translate_settings">"Translate Settings"</string>
    <string name="pref_cat_troubleshooting_info">"Translate Settings to Fix Apps Crashing or Not Translating"</string>
    <string name="pref_cat_advanced_settings">"Advanced Settings"</string>
    <string name="master_on_off">"Master On/Off"</string>
    <string name="master_on_off_summary">"Turn off to completely disable this module"</string>
    <string name="master_on_off_summary_off">"Module is turned off, no apps will be translated. Turn on to start using auto-translate!"</string>
    <string name="master_on_off_summary_on">"Module is turned on, selected apps will be translated. Turn off to completely disable this module."</string>
    <string name="translator_provider">"Translation Service Provider"</string>
    <string name="translator_provider_summary">"Select which Translation Service to use - Google, Microsoft, or Yandex"</string>
    <string name="translator_provider_google">"\nGoogle - This translation works offline, after initial download of around 30-60 MB. Translations are slow, makes apps \"lag\" or \"hang\" a bit. No need for any API key. Free.\n"</string>
    <string name="translator_provider_microsoft">"\nMicrosoft - Best translation, only works with Internet, requires a \"FREE\" API key. The process to get API keys is complicated, see Instructions.\n"</string>
    <string name="translator_provider_yandex">"\nYandex - Requires a \"PAID\" api key. If you already have a free API key, it may work, it may not. Not recommended.\n "</string>
    <string name="ask_download">"We need to download the translation files if not previously downloaded, around 30 MB. Translation will not work without downloading. Download now?"</string>
    <string name="download_now">"Download now"</string>
    <string name="cancel">"Cancel"</string>
    <string name="downloading">"Downloading the translation files. Please wait"</string>
    <string name="download_sucess">"Successfully Downloaded Translation Files"</string>
    <string name="download_failure">"Some Error in Downloading Translation Files"</string>
    <string name="subKey">"Microsoft / Yandex Subscription Key"</string>
    <string name="subKey_micro">"Microsoft Subscription Key"</string>
    <string name="subKey_yandex">"Yandex Subscription Key"</string>
    <string name="subKey_summary">"Enter the Subscription Key for Microsoft Azure or Yandex Translation API, whichever is enabled above"</string>
    <string name="subKey_defaultValue">"Enter Your Microsoft or Yandex Subscription Key"</string>
    <string name="transFrom">"Translate From Language"</string>
    <string name="transFrom_summary">"Language the app is originally in."</string>
    <string name="transTo">"Translate To Language"</string>
    <string name="transTo_summary">"Language you want the app to be translate into."</string>
    <string name="setText">"Translate Normal Text"</string>
    <string name="setText_summary_off">"Not Translating Text written using Set Text. Turn on to enable."</string>
    <string name="setText_summary_on">"Translating Text written using Set Text - Safe. Turn off to disable."</string>
    <string name="setHint">"Translate Text Hints (Gray-Coloured Suggestions) in Text Boxes"</string>
    <string name="setHint_summary_off">"Not Translating Text written using Set Hint. Turn on to enable."</string>
    <string name="setHint_summary_on">"Translating Text written using Set Hint - Safe. Turn off to disable."</string>
    <string name="webView">"Translate Text in Web Pages inside Apps"</string>
    <string name="webView_summary_off">"Not Translating Text in WebViews. Turn on to enable."</string>
    <string name="webView_summary_on">"Translating Text inside WebView - Safe, May Not Work Always. Turn off to disable."</string>
    <string name="notif">"Translate Notifications"</string>
    <string name="notif_summary_off">"Not Translating Text in Notifications. Turn on to enable."</string>
    <string name="notif_summary_on">"Translating Text inside Notifications - Safe, May sometimes crash apps. Turn off to disable."</string>
    <string name="drawText">"Aggressive Mode"</string>
    <string name="drawText_summary_off">"Not aggressively translating Text in drawText. Use when all above fails. Turn on to enable."</string>
    <string name="drawText_summary_on">"Aggressively translating Text in drawText - Experimental, May Not Work Always. Turn off to disable."</string>
    <string name="caching">"Use Caching"</string>
    <string name="caching_summary_off">"Not saving translations offline, resulting in slower translate and higher data - But may work for more apps. Turn on to save translations."</string>
    <string name="caching_summary_on">"Saving translations offline to speed up translate and use data. Turn off to disable if your app doesn&apos;t start."</string>
    <string name="delay">"Delay Before Replacing with Translated Text"</string>
    <string name="delay_summary">"Set the time in milliseconds to wait before replace with translated text. Default Value is 0. Set to 1000–5000 if the translated app is crashing."</string>
    <string name="delay_webview">"Delay Before Starting to Translate WebViews"</string>
    <string name="delay_webview_summary">"Set the time in milliseconds to wait before starting to translate WebViews. Default Value is 500. Set to 0 to increase translation speed. Set to 3000-5000 if part of web app are not translating."</string>
    <string name="scroll">"Scroll Long Translated Text"</string>
    <string name="scroll_summary_off">"Not scrolling translated text if it is too long. Text may be truncated, but will not interfere with the app&apos;s scrolling/clicking. Turn on to scroll long translations."</string>
    <string name="scroll_summary_on">"Scrolling translated text if it is too long. This may interfere with the app&apos;s scrolling/clicking. Turn off to disable this scrolling."</string>
    <string name="analytics">"Send Anonymous Crash and Usage Data"</string>
    <string name="analytics_summary_off">"Not sending anonymous crash and Usage data. Sending anonymous crash data helps the developer make the app better."</string>
    <string name="analytics_summary_on">"Sending anonymous crash and usage data. No personal information is transmitted. Anonymous crash data helps the developer make the app better"</string>
    <string name="debug">"Advanced : Turn on Debug Mode."</string>
    <string name="debug_summary_off">"Debug mode is off. Not writing debug data to logcat. Turn this on before sending error reports"</string>
    <string name="debug_summary_on">"Debug mode is on. Writing logs to logcat. This decreases performance - turn off if not needed."</string>
    <string name="local_on_off">"Translate This App"</string>
    <string name="local_on_off_summary">"Turn off to stop translating this app"</string>
    <string name="local_on_off_summary_off">"This app will not translated. Turn on to start using auto-translate!"</string>
    <string name="local_on_off_summary_on">"This will be translated. Turn off to completely disable translating this app."</string>
    <string name="overRide_global">"OverRide Global Settings"</string>
    <string name="overRide_global_summary_off">"Using Global Settings for this app. Turn on to change settings only for this app."</string>
    <string name="overRide_global_summary_on">"Using Local Settings for this app. Turn off to use Global Settings."</string>
    <string name="clear_cache">"Click to clear Translation Cache"</string>
    <string name="clear_cache_summary">"Click the above to clear the app&apos;s translate cache. Use this after changing to/from languages, or if the app does not start."</string>
    <string name="clear_cache_provider">Cache limpo devido à mudança de provedor</string>
    <string name="Automatic_google">Automático (Google)</string>
    <string name="Afrikaans_google">"Afrikaans"</string>
    <string name="Arabic_google">"Arabic"</string>
    <string name="Belarusian_google">"Belarusian"</string>
    <string name="Bulgarian_google">"Bulgarian"</string>
    <string name="Bengali_google">"Bengali"</string>
    <string name="Catalan_google">"Catalan"</string>
    <string name="Czech_google">"Czech"</string>
    <string name="Welsh_google">"Welsh"</string>
    <string name="Danish_google">"Danish"</string>
    <string name="German_google">"German"</string>
    <string name="Greek_google">"Greek"</string>
    <string name="English_google">"English"</string>
    <string name="Esperanto_google">"Esperanto"</string>
    <string name="Spanish_google">"Spanish"</string>
    <string name="Estonian_google">"Estonian"</string>
    <string name="Persian_google">"Persian"</string>
    <string name="Finnish_google">"Finnish"</string>
    <string name="French_google">"French"</string>
    <string name="Irish_google">"Irish"</string>
    <string name="Galician_google">"Galician"</string>
    <string name="Gujarati_google">"Gujarati"</string>
    <string name="Hebrew_google">"Hebrew"</string>
    <string name="Hindi_google">"Hindi"</string>
    <string name="Croatian_google">"Croatian"</string>
    <string name="Haitian_google">"Haitian"</string>
    <string name="Hungarian_google">"Hungarian"</string>
    <string name="Indonesian_google">"Indonesian"</string>
    <string name="Icelandic_google">"Icelandic"</string>
    <string name="Italian_google">"Italian"</string>
    <string name="Japanese_google">"Japanese"</string>
    <string name="Georgian_google">"Georgian"</string>
    <string name="Kannada_google">"Kannada"</string>
</resources>