<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        app:iconSpaceReserved="false"
        app:key="Enabled"
        app:title="@string/master_on_off"
        app:summaryOn="@string/master_on_off_summary_on"
        app:summaryOff="@string/master_on_off_summary_off"
        app:defaultValue="true" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_cat_translate_settings"
        app:key="pref_cat_translation_provider_global"
        app:allowDividerAbove="true">

        <ListPreference
            app:iconSpaceReserved="false"
            app:key="TranslatorProvider"
            app:title="@string/translator_provider"
            app:summary="%s"
            app:entries="@array/translatorProviderNames"
            app:entryValues="@array/translatorProviderCodes"
            app:defaultValue="g"
            android:layout="@layout/preference_material_item" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="GlobalMicrosoftSubscriptionKey"
            app:title="@string/subKey_micro_global"
            app:summary="@string/subKey_summary_micro_global"
            app:defaultValue=""
            android:layout="@layout/preference_material_item" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="SubscriptionRegion"
            app:title="@string/subRegion_micro_global"
            app:summary="@string/subRegion_summary_micro_global"
            app:defaultValue=""
            android:layout="@layout/preference_material_item" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="GlobalYandexSubscriptionKey"
            app:title="@string/subKey_yandex_global"
            app:summary="@string/subKey_summary_yandex_global"
            app:defaultValue=""
            android:layout="@layout/preference_material_item" />

        <ListPreference
            app:iconSpaceReserved="false"
            app:key="TranslateFromLanguage"
            app:title="@string/transFrom"
            app:summary="%s"
            app:entries="@array/languageNamesGoogle"
            app:entryValues="@array/languageCodesGoogle"
            app:defaultValue="auto"
            android:layout="@layout/preference_material_item" />

        <ListPreference
            app:iconSpaceReserved="false"
            app:key="TranslateToLanguage"
            app:title="@string/transTo"
            app:summary="%s"
            app:entries="@array/languageNamesGoogle"
            app:entryValues="@array/languageCodesGoogle"
            app:defaultValue="en"
            android:layout="@layout/preference_material_item" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_cat_troubleshooting_info"
        app:allowDividerAbove="true">
        <SwitchPreferenceCompat
            app:key="DrawText"
            app:title="@string/drawText"
            app:summaryOn="@string/drawText_summary_on"
            app:summaryOff="@string/drawText_summary_off"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <SwitchPreferenceCompat
            app:key="Scroll"
            app:title="@string/scroll"
            app:summaryOn="@string/scroll_summary_on"
            app:summaryOff="@string/scroll_summary_off"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <EditTextPreference
            app:key="Delay"
            app:title="@string/delay"
            app:summary="@string/delay_summary"
            app:defaultValue="@integer/default_delay"
            android:inputType="number"
            android:layout="@layout/preference_material_item"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:key="DelayWebView"
            app:title="@string/delay_webview"
            app:summary="@string/delay_webview_summary"
            app:defaultValue="@integer/default_delay_webview"
            android:inputType="number"
            android:layout="@layout/preference_material_item"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_cat_advanced_settings"
        app:allowDividerAbove="true">
        <SwitchPreferenceCompat
            app:key="SetText"
            app:title="@string/setText"
            app:summaryOn="@string/setText_summary_on"
            app:summaryOff="@string/setText_summary_off"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <SwitchPreferenceCompat
            app:key="SetHint"
            app:title="@string/setHint"
            app:summaryOn="@string/setHint_summary_on"
            app:summaryOff="@string/setHint_summary_off"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <SwitchPreferenceCompat
            app:key="LoadURL"
            app:title="@string/webView"
            app:summaryOn="@string/webView_summary_on"
            app:summaryOff="@string/webView_summary_off"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <SwitchPreferenceCompat
            app:key="Notif"
            app:title="@string/notif"
            app:summaryOn="@string/notif_summary_on"
            app:summaryOff="@string/notif_summary_off"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <SwitchPreferenceCompat
            app:key="Cache"
            app:title="@string/caching"
            app:summaryOn="@string/caching_summary_on"
            app:summaryOff="@string/caching_summary_off"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <SwitchPreferenceCompat
            app:key="Anon"
            app:title="@string/analytics"
            app:summaryOn="@string/analytics_summary_on"
            app:summaryOff="@string/analytics_summary_off"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <SwitchPreferenceCompat
            app:key="Debug"
            app:title="@string/debug"
            app:summaryOn="@string/debug_summary_on"
            app:summaryOff="@string/debug_summary_off"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>