<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:defaultValue="true"
        app:key="LocalEnabled"
        app:summaryOff="@string/local_on_off_summary_off"
        app:summaryOn="@string/local_on_off_summary_on"
        app:title="@string/local_on_off" />

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:defaultValue="false"
        app:key="OverRide"
        app:summaryOff="@string/overRide_global_summary_off"
        app:summaryOn="@string/overRide_global_summary_on"
        app:title="@string/overRide_global" />

    <PreferenceCategory
        app:title="@string/pref_cat_translate_settings_local"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        android:key="category_local_provider_settings">

        <ListPreference
            app:iconSpaceReserved="false"
            app:key="LocalTranslatorProvider"
            app:title="@string/translator_provider_local"
            app:summary="%s"
            app:entries="@array/translatorProviderNames"
            app:entryValues="@array/translatorProviderCodes"
            app:defaultValue="g"
            android:layout="@layout/preference_material_item" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="LocalMicrosoftSubscriptionKey"
            app:title="@string/subKey_micro_local"
            app:summary="@string/subKey_summary_local"
            app:defaultValue=""
            android:layout="@layout/preference_material_item" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="LocalMicrosoftSubscriptionRegion"
            app:title="@string/subRegion_micro_local"
            app:summary="@string/subRegion_summary_local"
            app:defaultValue=""
            android:layout="@layout/preference_material_item" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="LocalYandexSubscriptionKey"
            app:title="@string/subKey_yandex_local"
            app:summary="@string/subKey_summary_local"
            app:defaultValue=""
            android:layout="@layout/preference_material_item" />

        <ListPreference
            app:iconSpaceReserved="false"
            app:key="TranslateFromLanguage"
            app:title="@string/transFrom"
            app:summary="%s"
            app:entries="@array/languageNamesGoogle"
            app:entryValues="@array/languageCodesGoogle"
            app:defaultValue="auto"
            android:layout="@layout/preference_material_item"/>

        <ListPreference
            app:iconSpaceReserved="false"
            app:key="TranslateToLanguage"
            app:title="@string/transTo"
            app:summary="%s"
            app:entries="@array/languageNamesGoogle"
            app:entryValues="@array/languageCodesGoogle"
            app:defaultValue="en"
            android:layout="@layout/preference_material_item"/>
    </PreferenceCategory>

    <Preference
        app:iconSpaceReserved="false"
        app:key="ClearCache"
        app:persistent="false"
        app:summary="@string/clear_cache_summary"
        app:title="@string/clear_cache"
        android:layout="@layout/preference_material_item" />

    <PreferenceCategory
        app:title="@string/pref_cat_troubleshooting_info_local"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        android:key="category_local_troubleshooting">

        <SwitchPreferenceCompat
            app:key="DrawText"
            app:title="@string/drawText"
            app:summaryOn="@string/drawText_summary_on"
            app:summaryOff="@string/drawText_summary_off"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="Scroll"
            app:title="@string/scroll"
            app:summaryOn="@string/scroll_summary_on"
            app:summaryOff="@string/scroll_summary_off"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <EditTextPreference
            app:key="Delay"
            app:title="@string/delay"
            app:summary="@string/delay_summary"
            app:defaultValue="@integer/default_delay"
            android:inputType="number"
            android:layout="@layout/preference_material_item"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="DelayWebView"
            app:title="@string/delay_webview"
            app:summary="@string/delay_webview_summary"
            app:defaultValue="@integer/default_delay_webview"
            android:inputType="number"
            android:layout="@layout/preference_material_item"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_cat_advanced_settings_local"
        app:iconSpaceReserved="false"
        app:allowDividerAbove="true"
        android:key="category_local_advanced">

        <SwitchPreferenceCompat
            app:key="SetText"
            app:title="@string/setText"
            app:summaryOn="@string/setText_summary_on"
            app:summaryOff="@string/setText_summary_off"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="SetHint"
            app:title="@string/setHint"
            app:summaryOn="@string/setHint_summary_on"
            app:summaryOff="@string/setHint_summary_off"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="LoadURL"
            app:title="@string/webView"
            app:summaryOn="@string/webView_summary_on"
            app:summaryOff="@string/webView_summary_off"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="Cache"
            app:title="@string/caching"
            app:summaryOn="@string/caching_summary_on"
            app:summaryOff="@string/caching_summary_off"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="Notif"
            app:title="@string/notif"
            app:summaryOn="@string/notif_summary_on"
            app:summaryOff="@string/notif_summary_off"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>
