<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:descendantFocusability="blocksDescendants"
    android:padding="6dp"> <!-- Use dp para padding, dip é depreciado -->

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center" /> <!-- Ajuste a gravidade conforme necessário -->

    <ImageView
        android:id="@+id/icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_icon"
        android:src="@drawable/ic_list_icon_placeholder"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="fitCenter" /> <!-- Adicione scaleType para melhor controle da imagem -->

    <TextView
        android:id="@+id/firstLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:text="@string/example_application"
        android:textSize="16sp"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/secondLine"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constrainedWidth="true" /> <!-- Para ellipsize funcionar corretamente com 0dp -->

    <TextView
        android:id="@+id/secondLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:text="@string/description"
        android:textSize="12sp"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        app:layout_constraintStart_toStartOf="@id/firstLine"
        app:layout_constraintEnd_toEndOf="@id/firstLine"
        app:layout_constraintTop_toBottomOf="@id/firstLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constrainedWidth="true"/> <!-- Para ellipsize funcionar corretamente com 0dp -->

</androidx.constraintlayout.widget.ConstraintLayout>